mern-stack/4-mern-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: mern-stack
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mern.site
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactjs-service
                port:
                  number: 80
